[gd_scene load_steps=2 format=3 uid="uid://3yhkpq37cxb0"]

[ext_resource type="Script" uid="uid://rnnpo1wx1m80" path="res://Scripts/control_sacrifice_popup.gd" id="1_v2lfg"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
script = ExtResource("1_v2lfg")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 348.0
offset_bottom = 96.0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "A sacrifice must be made. Eliminate one key."

[node name="InstructionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Key_W" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Key_A" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Key_S" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Key_D" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ControlsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
